# write-yourself-a-git

./: Cargo.toml
src/: cli.yml  macros.rs  main.rs
src/errors/: mod.rs
src/fsutils/: mod.rs
src/repository/: config.rs  mod.rs  object.rs  tests.rs
